# xmms

./: .gitignore  ChangeLog  Makefile  Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  autogen.sh  confdefs.h  config.guess  config.h  config.h.in  config.status  config.sub  configure  configure.ac  gnomexmms.1  libtool  mkinstalldirs  wmxmms.1  xmms-config  xmms.1  xmms.spec
Effect/: Makefile  Makefile.in
Effect/echo_plugin/: Makefile  Makefile.in
Effect/stereo_plugin/: Makefile  Makefile.in
Effect/voice/: Makefile  Makefile.in
General/: Makefile  Makefile.in
General/ir/: Makefile  Makefile.in
General/joystick/: Makefile  Makefile.in
General/song_change/: Makefile  Makefile.in
Input/: Makefile  Makefile.in
Input/cdaudio/: Makefile  Makefile.in
Input/idcin/: Makefile  Makefile.in
Input/mikmod/: Makefile  Makefile.in
Input/mpg123/: Makefile  Makefile.in
Input/tonegen/: Makefile  Makefile.in
Input/vorbis/: Makefile  Makefile.in
Input/wav/: Makefile  Makefile.in
Output/: Makefile  Makefile.in
Output/OSS/: Makefile  Makefile.in  configure.c
Output/disk_writer/: Makefile  Makefile.in
Output/esd/: Makefile  Makefile.in
Output/solaris/: Makefile  Makefile.in  configure.c
Visualization/: Makefile  Makefile.in
Visualization/blur_scope/: Makefile  Makefile.in
Visualization/opengl_spectrum/: Makefile  Makefile.in
Visualization/sanalyzer/: Makefile  Makefile.in
autoconf/: ar-lib  ltmain.sh
autoconf-m4/: gettext.m4  ltoptions.m4
gnomexmms/: Makefile  Makefile.am  Makefile.in
intl/: Makefile
libxmms/: ChangeLog  Makefile  Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configfile.c  configure  configure.ac  dirbrowser.c  libtool  util.c  util.h
libxmms/autoconf-m4/: libtool.m4  ltsugar.m4  ltversion.m4  lt~obsolete.m4
libxmms/po/: ChangeLog  Makefile  Makefile.in
po/: ChangeLog  Makefile  Makefile.in  POTFILES
wmxmms/: Makefile  Makefile.am  Makefile.in
xmms/: Makefile  Makefile.am  Makefile.in  about.c  bmp.c  bmp.h  controlsocket.c  dock.c  eq_graph.c  eq_graph.h  eq_slider.c  eq_slider.h  equalizer.c  fullscreen.c  fullscreen.h  getopt.c  hints.c  hslider.c  hslider.h  i18n.h  main.c  main.h  menurow.c  menurow.h  monostereo.c  monostereo.h  number.c  number.h  pbutton.c  pbutton.h  playlist_list.c  playlist_list.h  playlist_popup.c  playlist_slider.c  playlist_slider.h  playlistwin.c  playstatus.c  playstatus.h  pluginenum.c  prefswin.c  (+20 more)
xmms/defskin/: Makefile  Makefile.in
